# python-project-skelton

./: .gitignore  pyproject.toml
docker/: .env.sample  docker-compose.yml
docker/python/: Dockerfile
